--- a/scss/components/_properties-section.scss
+++ b/scss/components/_properties-section.scss
@@ -117,6 +117,7 @@
 		@include media('>=tablet') {
 			margin-bottom: 0;
 			width: 49%;
+			padding-left: 15px;
 		}
 	}
 
